[gd_scene load_steps=43 format=3 uid="uid://b6653djm7tel5"]

[ext_resource type="Script" uid="uid://bjweh3iqtxrmn" path="res://scripts/managers/player.gd" id="1_uig86"]
[ext_resource type="Texture2D" uid="uid://csdrblcm2mjqw" path="res://assets/texture/rusty_metal_05_diff_1k.jpg" id="2_k07tx"]
[ext_resource type="FontFile" uid="uid://d1bi00cukbxbx" path="res://other/better-vcr.ttf" id="2_vefpe"]
[ext_resource type="PackedScene" uid="uid://div1wxi883ats" path="res://scenes/ui/inventory_ui.tscn" id="3_84j7k"]
[ext_resource type="Shader" uid="uid://djaim7ixsk6gu" path="res://scenes/other/shaders/Player.gdshader" id="3_ohiew"]
[ext_resource type="Script" uid="uid://bgdl3osnatmft" path="res://scripts/ui/CamcorderUI.gd" id="3_rw3ki"]
[ext_resource type="AudioStream" uid="uid://c6hw2wjvcox8a" path="res://assets/sounds/walking.mp3" id="5_8kldo"]
[ext_resource type="Script" uid="uid://b75nvh24uflm8" path="res://scripts/components/inventory.gd" id="6_b3diy"]
[ext_resource type="Shader" uid="uid://f10xuup0o7kn" path="res://scenes/other/shaders/VHS_test.gdshader" id="6_rw3ki"]
[ext_resource type="Texture2D" uid="uid://c3w75lcla3t77" path="res://other/rgba-noise-medium.png" id="7_imgtv"]
[ext_resource type="FontFile" uid="uid://bmya5dxe84pfu" path="res://other/VCR_OSD_MONO_1.001.ttf" id="8_imgtv"]
[ext_resource type="Texture2D" uid="uid://c1ea0543t8y0y" path="res://assets/texture/Pack/carpet/carpet_color.png" id="11_3ys8e"]
[ext_resource type="PackedScene" uid="uid://biiygas868jo6" path="res://scenes/ui/PauseMenu.tscn" id="14_wo77t"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_40svl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uovlx"]
albedo_color = Color(0.40392157, 0.4, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_al8ar"]
material = SubResource("StandardMaterial3D_uovlx")

[sub_resource type="Gradient" id="Gradient_m3b33"]
offsets = PackedFloat32Array(0.28235295, 0.5294118, 0.72156864, 0.85882354, 0.92941177)
colors = PackedColorArray(1, 1, 1, 1, 0.40705642, 0.4070561, 0.40705615, 1, 0.3465695, 0.34656927, 0.34656942, 1, 0.6842768, 0.68427664, 0.6842767, 1, 0.00069389754, 0.00069389766, 0.0006938976, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3ys8e"]
gradient = SubResource("Gradient_m3b33")
fill = 1
fill_from = Vector2(0.4957265, 0.54415953)
fill_to = Vector2(0.962963, 0.10541311)

[sub_resource type="CylinderMesh" id="CylinderMesh_uig86"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aiddh"]
albedo_color = Color(0.40199232, 0.39899144, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_uig86"]
material = SubResource("StandardMaterial3D_aiddh")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7ns1o"]
albedo_texture = ExtResource("2_k07tx")

[sub_resource type="CylinderMesh" id="CylinderMesh_a12us"]
material = SubResource("StandardMaterial3D_7ns1o")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5wq2b"]
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 8.4

[sub_resource type="CylinderMesh" id="CylinderMesh_k07tx"]
material = SubResource("StandardMaterial3D_5wq2b")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cen38"]
albedo_color = Color(0.16809729, 0.082229994, 0.06299454, 1)
albedo_texture = ExtResource("11_3ys8e")
metallic = 1.0
metallic_texture = ExtResource("7_imgtv")

[sub_resource type="SphereMesh" id="SphereMesh_yporg"]
material = SubResource("StandardMaterial3D_cen38")
radius = 0.35
height = 0.3
radial_segments = 10
rings = 10
is_hemisphere = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2pjvx"]
albedo_color = Color(0.20707613, 0.19853988, 0.19026044, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_vefpe"]
material = SubResource("StandardMaterial3D_2pjvx")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sxfpp"]
albedo_color = Color(0.34117648, 0.33333334, 0.34117648, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_3jhsl"]
material = SubResource("StandardMaterial3D_sxfpp")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yugvt"]
albedo_color = Color(0, 0.21176471, 0.32941177, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_imgtv"]
material = SubResource("StandardMaterial3D_yugvt")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_gy20a"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Head:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Head/Flashlight:visible")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:current_battery")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="SphereShape3D" id="SphereShape3D_vefpe"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a12us"]
shader = ExtResource("6_rw3ki")
shader_parameter/brightness = 1.1
shader_parameter/color_displacement = 1.5
shader_parameter/grain_intensity = 0.02
shader_parameter/distortion = 0.01
shader_parameter/scanline_opacity = 0.1
shader_parameter/vignette_softness = 0.35
shader_parameter/tint = Color(1, 0.98, 0.9, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8kldo"]
shader = ExtResource("3_ohiew")
shader_parameter/intensity = 0.0
shader_parameter/vignette_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_3jhsl"]

[sub_resource type="LabelSettings" id="LabelSettings_ohiew"]
font = ExtResource("2_vefpe")
font_size = 66
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k07tx"]
emission_shape_scale = Vector3(3.36, 1.885, 3.215)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
gravity = Vector3(0, 0, 0)
turbulence_enabled = true
turbulence_noise_strength = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3ys8e"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 1, 0.20784314)
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_wo77t"]
material = SubResource("StandardMaterial3D_3ys8e")
size = Vector2(0.02, 0.02)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)
collision_layer = 2
script = ExtResource("1_uig86")
WALK_SPEED = 6.0
SPRINT_SPEED = 9.0
FLASHLIGHT_DRAIN = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_40svl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.99999976, 0, 0, 0, 0.82375973, 0, 0, 0, 0.99999976, 4.9670525e-08, -0.16204533, 0)
mesh = SubResource("CapsuleMesh_al8ar")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.57199705, -0.034348637)

[node name="Flashlight" type="SpotLight3D" parent="Head"]
transform = Transform3D(0.83333325, 0, 0, 0, 0.83333325, 0, 0, 0, 0.83333325, 0, 0.432, -0.393)
visible = false
light_color = Color(0.8784314, 0.9411765, 1, 1)
light_energy = 8.33
light_projector = SubResource("GradientTexture2D_3ys8e")
shadow_enabled = true
shadow_opacity = 0.8
shadow_blur = 2.0
spot_range = 44.09
spot_angle = 40.1
spot_angle_attenuation = 2.0705302

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(0.83333325, 0, 0, 0, 0.83333325, 0, 0, 0, 0.83333325, 0, 0.29499996, -0.322)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Head"]
transform = Transform3D(0.1, 0, 0, 0, -4.371139e-09, -0.1, 0, 0.1, -4.371139e-09, 0, 0.109915495, -0.42217854)
visible = false
mesh = SubResource("CylinderMesh_uig86")
skeleton = NodePath("../..")

[node name="HEad" type="MeshInstance3D" parent="Head"]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0.19800001, 0)
mesh = SubResource("SphereMesh_uig86")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="Head"]
transform = Transform3D(0.09999998, 0, 0, 0, -4.3711377e-09, 0.09999998, 0, -0.09999998, -4.3711377e-09, 0, 0.42800295, -0.25365135)
mesh = SubResource("CylinderMesh_a12us")
skeleton = NodePath("../..")

[node name="MeshInstance3D9" type="MeshInstance3D" parent="Head"]
transform = Transform3D(0.04999999, 0, 0, 0, -2.1855688e-09, -0.04999999, 0, 0.04999999, -2.1855688e-09, 0, 0.433003, -0.30765137)
mesh = SubResource("CylinderMesh_k07tx")
skeleton = NodePath("../..")

[node name="MeshInstance3D10" type="MeshInstance3D" parent="Head"]
transform = Transform3D(0.99999976, 0, 0, 0, 0.99999976, 0, 0, 0, 0.99999976, 0, 0.30100298, -0.0056513585)
mesh = SubResource("SphereMesh_yporg")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Head"]
transform = Transform3D(0.094884664, -0.030782491, 0.0070242155, 0.022859557, 0.05162955, -0.08253381, 0.021779392, 0.079917654, 0.056025267, 0.12682629, 0.12015605, -0.27348626)
mesh = SubResource("CylinderMesh_vefpe")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Head/MeshInstance3D3"]
transform = Transform3D(0.80007994, 0.58501583, -0.13277319, -0.5849635, 0.80989003, 0.043539256, 0.13300288, 0.042832434, 0.9901898, -2.4078698, 0.7838609, -0.17470741)
mesh = SubResource("CylinderMesh_vefpe")
skeleton = NodePath("../../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Head"]
transform = Transform3D(0.142327, -0.0153912455, 0.010536328, 0.03428934, 0.025814775, -0.123800725, 0.03266909, 0.039958816, 0.08403789, 0.17704554, 0.05007738, -0.38110602)
mesh = SubResource("CylinderMesh_vefpe")
skeleton = NodePath("../..")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Head"]
transform = Transform3D(0.12988874, 0.024763769, 0.010474613, -0.034333747, 0.025826165, -0.123767026, -0.06670914, 0.034925133, 0.084095225, -0.177, 0.050002933, -0.38065135)
mesh = SubResource("CylinderMesh_vefpe")
skeleton = NodePath("../..")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Head"]
transform = Transform3D(0.1, 0, 0, 0, 0.010770099, -0.09333363, 0, 0.028000087, 0.035900332, 0, 0.08175838, -0.33861312)
mesh = SubResource("CylinderMesh_3jhsl")
skeleton = NodePath("../..")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="Head"]
transform = Transform3D(0.09999998, 0, 0, 0, -1.3113416e-09, -0.09999998, 0, 0.03, -4.3711377e-09, -0.083, 0.26100296, -0.31765136)
mesh = SubResource("CylinderMesh_imgtv")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Head/MeshInstance3D7"]
transform = Transform3D(0.99999994, 0, 0, 0, 0.9999999, 0, 0, 8.881784e-16, 1, 1.6666669, -9.536743e-07, 0)
mesh = SubResource("CylinderMesh_imgtv")
skeleton = NodePath("../../..")

[node name="InteractionRay" type="RayCast3D" parent="Head"]
transform = Transform3D(0.99999994, 0, 0, 0, 0.9636304, -0.26723838, 0, 0.26723838, 0.9636304, 0, 0.28, -0.375)
target_position = Vector3(0, -0.55, -1.855)
collision_mask = 3

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_gy20a")

[node name="SpectatorArm" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7864721, 0)
shape = SubResource("SphereShape3D_vefpe")
spring_length = 3.0

[node name="FootstepsPlayer" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(0.83333325, 0, 0, 0, 0.83333325, 0, 0, 0, 0.83333325, 0, -0.99999976, 0)
stream = ExtResource("5_8kldo")
max_distance = 20.0

[node name="Inventory" type="Node3D" parent="."]
script = ExtResource("6_b3diy")

[node name="Hud(vhs)" type="CanvasLayer" parent="."]

[node name="VHS test" type="ColorRect" parent="Hud(vhs)"]
material = SubResource("ShaderMaterial_a12us")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="StaminaOverlay" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_8kldo")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.078431375, 0.078431375, 0.078431375, 0)

[node name="DeathScreen" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = SubResource("Theme_3jhsl")
color = Color(0.88235295, 0, 0, 0.24313726)

[node name="Label" type="Label" parent="CanvasLayer/DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -297.5
offset_top = -33.0
offset_right = 297.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "YOU ARE DEAD"
label_settings = SubResource("LabelSettings_ohiew")

[node name="SpectatorHUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="InfoLabel" type="Label" parent="CanvasLayer/SpectatorHUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -173.0
offset_right = 173.0
offset_bottom = 62.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_imgtv")
theme_override_font_sizes/font_size = 31
text = "spectate: player 2"

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_rw3ki")

[node name="TimerLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -135.0
offset_right = 184.0
offset_bottom = -88.0
grow_vertical = 0
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("8_imgtv")

[node name="DateLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -88.0
offset_right = 211.0
offset_bottom = -26.0
grow_vertical = 0
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("8_imgtv")

[node name="InventoryUI" parent="CanvasLayer" instance=ExtResource("3_84j7k")]
visible = false
scale = Vector2(1.0027939, 1)

[node name="DustParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(2.2999995, 0, 0, 0, 1.2999995, 0, 0, 0, 1.9999995, 0, 1.6666665, 0)
amount = 1500
lifetime = 5.0
preprocess = 2.0
visibility_aabb = AABB(-10, -10, -10, 20, 20, 20)
process_material = SubResource("ParticleProcessMaterial_k07tx")
draw_pass_1 = SubResource("QuadMesh_wo77t")

[node name="PauseMenu" type="CanvasLayer" parent="."]
layer = 10

[node name="PauseMenu" parent="PauseMenu" instance=ExtResource("14_wo77t")]
visible = false
